# Neptune_w800_project

./: README.md  ohos_config.json
.deveco/: deveco.ini
.deveco/status/: download_tools.py  wifiiot_neptune.winnermicro
applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/IIC/: BUILD.gn  iic_demo.c  iic_test.c
applications/sample/wifi-iot/app/demolink/: BUILD.gn  helloworld.c
applications/sample/wifi-iot/app/iothardware/: BUILD.gn  README.md  gpio_example.c  lowpower_example.c  traffic_light_example.c
applications/sample/wifi-iot/app/master/: BUILD.gn  main_test.c  master.c  readme.md
applications/sample/wifi-iot/app/master/FALL_DOWN/: fall_detect.c  fall_detect.h  readme.md
applications/sample/wifi-iot/app/master/IMU/: imu.c  imu.h
applications/sample/wifi-iot/app/master/MPU6050/: mpu6050.c  mpu6050.h
applications/sample/wifi-iot/app/master/Max30102/INC/: algorithm.h  myiic.h
applications/sample/wifi-iot/app/master/Max30102/SRC/: algorithm.c  max30102.c  myiic.c
applications/sample/wifi-iot/app/master/WIFI/: wifi_connecter.c  wifi_connecter.h
applications/sample/wifi-iot/app/max30102_test/: BUILD.gn
applications/sample/wifi-iot/app/max30102_test/INC/: max30102.h  max30102_fir.h
applications/sample/wifi-iot/app/max30102_test/SRC/: main.c  max30102.c  max30102_fir.c
applications/sample/wifi-iot/app/mpu6050_example/: BUILD.gn  mpu6050_example.c
applications/sample/wifi-iot/app/mpu6050_example/IMU/: imu.c
applications/sample/wifi-iot/app/mpu6050_example/MPU6050/: mpu6050.c
applications/sample/wifi-iot/app/mpu6050_example/OLED/: ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h
applications/sample/wifi-iot/app/mqtt_oc_sample/: BUILD.gn  README.md  mqtt_oc_sample.c  wifi_connecter.c  wifi_connecter.h
applications/sample/wifi-iot/app/mqtt_oc_sample/src/: BUILD.gn  aht21.c  aht21.h
applications/sample/wifi-iot/app/my_test_gn/: BUILD.gn  Bluetooth_test.c  gpio_test.c  my_test_gn.c
applications/sample/wifi-iot/app/network/: BUILD.gn  README.md  net_common.h  net_demo_common.h  net_params.h  tcp_client_demo.c  wifi_connecter.c
applications/sample/wifi-iot/app/tmp/: BUILD.gn  max30102.h  mymain.c  mymain0.c
applications/sample/wifi-iot/app/uart_sample/: BUILD.gn  README.md  uart1_example.c  uart2_example.c  uart3_example.c  uart4_example.c
applications/sample/wifi-iot/app/wifi_bt/: BUILD.gn  wifi_bt.c
applications/sample/wifi-iot/app/wifitest/: BUILD.gn  README.md  wifi_connect_demo.c  wifi_control.c  wifi_hotspot_demo.c  wifi_scan_demo.c
base/iot_hardware/peripheral/interfaces/kits/: iot_gpio_w800.h  iot_i2c.h
device/hisilicon/hispark_pegasus/sdk_liteos/platform/drivers/i2c/: i2c.c
device/winnermicro/neptune/sdk_liteos/: BUILD.gn  Makefile  ohos_build.sh
device/winnermicro/neptune/sdk_liteos/demo/: wm_adc_demo.c  wm_demo.h  wm_i2c_demo.c  wm_uart_demo.c
device/winnermicro/neptune/sdk_liteos/doc/: ChangeLog.txt
device/winnermicro/neptune/sdk_liteos/include/: wm_config.h  wm_debug.h  wm_include.h  wm_regs.h  wm_type_def.h
device/winnermicro/neptune/sdk_liteos/include/app/: wm_wifi_oneshot.h
device/winnermicro/neptune/sdk_liteos/include/bt/: ble_if.h  ble_server.h  ble_util.h  wm_ble.h  wm_bt_def.h
device/winnermicro/neptune/sdk_liteos/include/driver/: wm_adc.h  wm_gpio_afsel.h  wm_uart.h
device/winnermicro/neptune/sdk_liteos/include/os/: wm_osal.h
device/winnermicro/neptune/sdk_liteos/include/wifi/: wm_wifi.h
device/winnermicro/neptune/sdk_liteos/ld/w800/: gcc_csky.ld
device/winnermicro/neptune/sdk_liteos/platform/common/crypto/: wm_crypto_hard.c
device/winnermicro/neptune/sdk_liteos/platform/common/mem/: wm_mem.c
device/winnermicro/neptune/sdk_liteos/platform/common/params/: wm_param.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/adc/: wm_adc.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/cpu/: wm_cpu.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/dma/: wm_dma.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/efuse/: wm_efuse.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/gpio/: wm_gpio.c  wm_gpio_afsel.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/i2s/: wm_i2s.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/spi/: wm_hostspi.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/timer/: wm_timer.c
device/winnermicro/neptune/sdk_liteos/platform/drivers/uart/: wm_uart.c
device/winnermicro/neptune/sdk_liteos/platform/sys/: Makefile  tls_sys.c  wm_main.c
device/winnermicro/neptune/sdk_liteos/src/app/: Makefile
device/winnermicro/neptune/sdk_liteos/src/app/btapp/: wm_audio_sink.c  wm_ble_client.c  wm_ble_client.h  wm_ble_client_demo.c  wm_ble_client_demo.h  wm_ble_client_huawei.c  wm_ble_client_huawei.h  wm_ble_dm.c  wm_ble_dm.h  wm_ble_server.c  wm_ble_server.h  wm_ble_server_api_demo.c  wm_ble_server_api_demo.h  wm_ble_server_demo_prof.c  wm_ble_server_demo_prof.h  wm_ble_server_wifi_app.c  wm_ble_server_wifi_app.h  wm_ble_server_wifi_prof.c  wm_ble_server_wifi_prof.h  wm_bt_util.c  wm_bt_util.h  wm_hfp_hsp_client.c  wm_hfp_hsp_client.h
device/winnermicro/neptune/sdk_liteos/src/app/httpclient/: wm_httpclient_task.c
device/winnermicro/neptune/sdk_liteos/src/app/iperf/: wm_perf.c
device/winnermicro/neptune/sdk_liteos/src/app/mqtt/: libemqtt.h
device/winnermicro/neptune/sdk_liteos/src/app/oneshotconfig/: wm_wifi_oneshot.c
device/winnermicro/neptune/sdk_liteos/src/app/ping/: ping.c  ping.h
device/winnermicro/neptune/sdk_liteos/src/app/wm_atcmd/: wm_cmdp_hostif.c  wm_cmdp_hostif_gcc.h  wm_uart_task.c
device/winnermicro/neptune/sdk_liteos/src/network/lwip2.0.3/: sys_arch.c
device/winnermicro/neptune/sdk_liteos/src/os/: Makefile
device/winnermicro/neptune/sdk_liteos/src/os/liteos/: wm_osal_liteos.c
device/winnermicro/neptune/sdk_liteos/tools/w800/: conf.mk  inc.mk  rules.mk  wm_getver  wm_tool
