# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# 控制app/下哪些代码会被编译到固件中去

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        #格式：文件夹名称：文件夹下面BUILD文件中静态库的名称
        "my_test_gn:my_test_gn",
        # "demolink:example_demolink",
        # "iothardware:gpio_example",
        # "samgr:example_samgr",
    ]
}
