
static_library("mpu6050_example") {
    sources = [
        "../mpu6050_example/IMU/imu.c",
        "../mpu6050_example/MPU6050/mpu6050.c",
        "../mpu6050_example/OLED/ssd1306.c",
        "../mpu6050_example/OLED/ssd1306_fonts.c",
        "mpu6050_example.c"
    ]

    include_dirs = [
        "../mpu6050_example/IMU",
        "../mpu6050_example/MPU6050",
        "../mpu6050_example/OLED",
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
    ]
}
