#学习gn文件的使用

static_library("my_test_gn") {      #静态库的名称
    #要编译的源代码
    sources = [
        "my_test_gn.c",
    ]
    #头文件的路径
    include_dirs = [
        # "//utils/native/lite/include",
        # "//kernel/liteos_m/kal/cmsis",

        "//utils/native/lite/include",
        "//domains/iot/link/libbuild"
        #"//base/iot_hardware/peripheral/interfaces/kits"
    ]
}