#学习gn文件的使用

static_library("wifi_bt") {      #静态库的名称
    #要编译的源代码
    sources = [
        "wifi_bt.c",
    ]
    #头文件的路径
    include_dirs = [
        "//utils/native/lite/include",
        "//domains/iot/link/libbuild",
        "//base/iot_hardware/peripheral/interfaces/kits",
        #wifi_blue
        "//device/winnermicro/neptune/sdk_liteos/include",
        "//device/winnermicro/neptune/sdk_liteos/include/bt",
        "//device/winnermicro/neptune/sdk_liteos/src/app/btapp",
        "//device/winnermicro/neptune/sdk_liteos/include/driver"
    ]
}